Align mobile menu link to the right, wrap logo home link in div to stop it filling grid

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,6 +10,10 @@
 		padding-left: 6rem;
 		padding-right: 6rem;
 	}
+
+	&__burger {
+		justify-self: end;
+	}
 }
 
 .entered .header__link,
